fixed the "game development" box from being too small to fit the text

--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ position: relative;
 
 .topnavDropDown {
 width: 96pt;
-height:5%;
+height:8%;
 padding: 7px;
 background-color: gray;
 font-size: 0.35m;
